Add MySQL table processing

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DEBUG=True
 HIGH_TRAFFIC_THRESHOLD=100
 SUBNET_IP_THRESHOLD=50
 SUBNET_VIEW_THRESHOLD=5000
+# Default MySQL port when not specified in the form
+MYSQL_PORT=3306
